# crow-linker

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/common/: Common.h
include/discriminator/: Discriminator.h
include/instrumentor/: Instrumentor.h
lib/Pass/: Pass.cpp
lib/common/: Common.cpp
lib/discriminator/: Discriminator.cpp
lib/instrumentor/: Instrumentor.cpp
test/: .gitignore  codecs.original.bc  common.sh  example_ptr.c  f1  f2  merge_codecs.sh  merge_full_libsodium.sh  merge_full_libsodium2.sh  merge_n1_layer.sh  recursive.c  recursive2.bc  t1.c  test.sh  test_discrimator.sh  test_extractor.sh  test_idem.sh  test_ptr.sh  test_randombytes.sh  test_recursive.sh  test_recursive2.sh  test_static_mapper.sh  wrandombytes.bc
test/bcs/: auth_hmacsha256.original.bc  auth_hmacsha256_[19YVxqG8].bc  auth_hmacsha256_[OUvHt3FW].bc  auth_hmacsha256_[bbCn8QRo].bc
tools/: crow-linker.cpp  static_mapper.cpp
